# STDISCM-ManipolYap-ProblemSet4

./: .gitignore  CMakeLists.txt  CMakePresets.json  Client.cpp
proto/: ocr_service.proto
src/client/: mainwindow.cpp  mainwindow.h
src/server/: main.cpp  ocr_processor.cpp  ocr_processor.h  ocr_service.cpp  ocr_service.h  ocr_service.proto
